[gd_scene load_steps=29 format=2]

[ext_resource path="res://Assets/Images/Animations/fireplace/1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Images/Animations/fireplace/3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Animations/fireplace/8.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Animations/fireplace/4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Images/Animations/fireplace/2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Images/Animations/fireplace/7.png" type="Texture" id=6]
[ext_resource path="res://Assets/Images/Animations/fireplace/5.png" type="Texture" id=7]
[ext_resource path="res://Assets/Images/Animations/fireplace/6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Images/placable_object_preview/furnace/left.png" type="Texture" id=9]
[ext_resource path="res://World/Objects/Tiles/FurnaceObject.gd" type="Script" id=10]
[ext_resource path="res://World/Objects/Tiles/FurnaceInteractiveArea.gd" type="Script" id=11]
[ext_resource path="res://Assets/Images/Misc/light.png" type="Texture" id=12]
[ext_resource path="res://Assets/Images/Animations/furnace smoke/Smoke_Effect_10.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 3 ) ],
"loop": true,
"name": "active fire",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 13 )
region = Rect2( 112, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 13 )
region = Rect2( 224, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 13 )
region = Rect2( 336, 0, 112, 112 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 13 )
region = Rect2( 0, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 13 )
region = Rect2( 112, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 13 )
region = Rect2( 224, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 13 )
region = Rect2( 336, 112, 112, 112 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 13 )
region = Rect2( 0, 224, 112, 112 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 13 )
region = Rect2( 112, 224, 112, 112 )

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 15 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 13, 21.5 )

[node name="FurnaceObject" type="Node2D"]
script = ExtResource( 10 )

[node name="Furnace" type="Sprite" parent="."]
position = Vector2( 16, -48 )
texture = ExtResource( 9 )

[node name="Fire" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 16, -23.5 )
scale = Vector2( 0.05, 0.05 )
frames = SubResource( 1 )
animation = "active fire"
playing = true

[node name="Smoke" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 21, -107 )
scale = Vector2( 0.75, 0.75 )
frames = SubResource( 15 )
frame = 4
playing = true

[node name="SmeltTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="FireLight" type="Light2D" parent="."]
visible = false
position = Vector2( 16, 0 )
enabled = false
texture = ExtResource( 12 )
color = Color( 1, 0.368627, 0.0901961, 1 )
energy = 0.5

[node name="HurtBox" type="Area2D" parent="."]
position = Vector2( 16, -16 )
collision_layer = 24
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
light_mask = 0
shape = SubResource( 2 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 16, -16 )
shape = SubResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, -16 )

[node name="InteractiveArea" type="Area2D" parent="Position2D"]
position = Vector2( 0, -3 )
collision_layer = 0
collision_mask = 2097152
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Position2D/InteractiveArea"]
position = Vector2( 0, 10.5 )
shape = SubResource( 4 )

[connection signal="timeout" from="SmeltTimer" to="." method="_on_SmeltTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
